@@ -4,7 +4,7 @@ MooseX::Extended - Extend Moose with safe defaults and useful features
 
 # VERSION
 
-version 0.06
+version 0.07
 
 # SYNOPSIS
 
@@ -87,6 +87,32 @@ A `param` is a required parameter (defaults may be used). A `field` is not
 allowed to be passed to the constructor.
 
 Note that the `has` function is still available, even if it's not needed.
+
+Also, while your author likes the postfix block syntax, it's not required. You
+can even safely inline multiple packages in the same file:
+
+```perl
+package My::Point;
+use MooseX::Extended types => [qw/Num/];
+
+param [ 'x', 'y' ] => ( isa => Num );
+
+package My::Point::Mutable;
+use MooseX::Extended;
+extends 'My::Point';
+
+param [ '+x', '+y' ] => ( writer => 1, clearer => 1, default => 0 );
+
+sub invert ($self) {
+    my ( $x, $y ) = ( $self->x, $self->y );
+    $self->set_x($y);
+    $self->set_y($x);
+}
+```
+
+\# MooseX::Extended will causet this to return true, even if we try to return
+\# false
+0;
 
 # CONFIGURATION
 
